# ig-tools

./: README.md  pyproject.toml
src/ig-tools/: detect_non_followers.py
