[project]
name = "ig-tools"
version = "0.1.0"
description = "A collection of instagram Python tools"
authors = [
    { name="Bharath Ramachandraiah" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.urls]
"Homepage" = "https://github.com/curioussingularity/ig-tools"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
